# paypaul

./: .gitignore  Cargo.toml  README.md
paypaul-frontend/: package.json  pnpm-lock.yaml  tailwind.config.js
paypaul-frontend/src/: App.tsx
src/: bip21.rs  main.rs
