[package]
name = "paypaul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = { version = "0.6.1", features = ["macros"] }
bdk = { version = "0.26.0", features = ["sqlite"] }
dotenv = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
# tonic_lnd = "0.5.0"
# need to use this until tonic_lnd issue is fixed: https://github.com/Kixunil/tonic_lnd/issues/17
tonic_lnd = { git = "https://github.com/okjodom/tonic_lnd", branch = "openssl-support" } 
tower-http = { version = "0.3.5", features = ["cors"] }
